# dataspace-control-plane

./: .coveragerc  .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  Makefile  PLANS.md  README.md  Taskfile.yml  mkdocs.yml  pytest.ini
adapters/: AGENTS.md  CLAUDE.md  DEPENDENCY_NOTES.md  README.md  pyproject.toml
adapters/src/dataspace_control_plane_adapters/: __init__.py  api.py
apps/control-api/: .env.example  pyproject.toml
apps/control-api/app/: __init__.py  lifespan.py  main.py  settings.py
apps/control-api/tests/: conftest.py
apps/provisioning-agent/: .env.example  pyproject.toml
apps/provisioning-agent/src/: main.py  settings.py
apps/provisioning-agent/tests/: test_apply.py  test_plan.py
apps/temporal-workers/: .env.example  pyproject.toml
apps/temporal-workers/src/: health.py  main.py
core/: AGENTS.md  CLAUDE.md  DEPENDENCY_NOTES.md  README.md  pyproject.toml
core/src/dataspace_control_plane_core/: __init__.py  api.py
packs/: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
packs/src/dataspace_control_plane_packs/: __init__.py  activation.py  api.py  loader.py  registry.py  resolver.py
procedures/: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
procedures/src/dataspace_control_plane_procedures/: __init__.py  registry.py
procedures/tests/: conftest.py
procedures/tests/integration/: test_procedure_workflows.py
procedures/tests/replay/: test_replayer.py
procedures/tests/scenarios/: test_continue_as_new_and_dedupe.py
procedures/tests/unit/: test_company_onboarding.py  test_shared_primitives.py
schemas/: AGENTS.md  CLAUDE.md  conftest.py  pyproject.toml  registry.yaml
schemas/_shared/meta/: manifest.schema.json  provenance.schema.json  schema-catalog.schema.json
schemas/_shared/tests/: test_registry_contract.py
schemas/aas/: README.md  manifest.yaml
schemas/aas/bundles/: aasx-manifest.bundle.provenance.yaml  aasx-manifest.bundle.schema.json  access-rule.bundle.provenance.yaml  access-rule.bundle.schema.json  access-token-claims.bundle.provenance.yaml  access-token-claims.bundle.schema.json  endpoint-ref.bundle.provenance.yaml  endpoint-ref.bundle.schema.json  object-attributes.bundle.provenance.yaml  object-attributes.bundle.schema.json  shell-descriptor.bundle.provenance.yaml  shell-descriptor.bundle.schema.json  shell.bundle.provenance.yaml  shell.bundle.schema.json  subject-attributes.bundle.provenance.yaml  subject-attributes.bundle.schema.json  submodel-descriptor.bundle.provenance.yaml  submodel-descriptor.bundle.schema.json  submodel.bundle.provenance.yaml  submodel.bundle.schema.json  value-only.bundle.provenance.yaml  value-only.bundle.schema.json
schemas/aas/tests/: test_aas_schemas.py
schemas/dpp/: README.md  manifest.yaml
schemas/dpp/bundles/: access-class.bundle.provenance.yaml  access-class.bundle.schema.json  completeness.bundle.provenance.yaml  completeness.bundle.schema.json  evidence-envelope.bundle.provenance.yaml  evidence-envelope.bundle.schema.json  id-link.bundle.provenance.yaml  id-link.bundle.schema.json  passport-envelope.bundle.provenance.yaml  passport-envelope.bundle.schema.json  passport-lifecycle.bundle.provenance.yaml  passport-lifecycle.bundle.schema.json  passport-link.bundle.provenance.yaml  passport-link.bundle.schema.json  passport-subject.bundle.provenance.yaml  passport-subject.bundle.schema.json  registry-envelope.bundle.provenance.yaml  registry-envelope.bundle.schema.json  shell-binding.bundle.provenance.yaml  shell-binding.bundle.schema.json  submodel-binding.bundle.provenance.yaml  submodel-binding.bundle.schema.json
schemas/dpp/tests/: test_dpp_schemas.py
schemas/enterprise-mapping/: README.md  manifest.yaml
schemas/enterprise-mapping/bundles/: approval.bundle.provenance.yaml  approval.bundle.schema.json  confidence.bundle.provenance.yaml  confidence.bundle.schema.json  event-schema-ref.bundle.provenance.yaml  event-schema-ref.bundle.schema.json  field-mapping.bundle.provenance.yaml  field-mapping.bundle.schema.json  lineage-graph.bundle.provenance.yaml  lineage-graph.bundle.schema.json  mapping-result.bundle.provenance.yaml  mapping-result.bundle.schema.json  mapping-run.bundle.provenance.yaml  mapping-run.bundle.schema.json  mapping-spec.bundle.provenance.yaml  mapping-spec.bundle.schema.json  object-metadata-ref.bundle.provenance.yaml  object-metadata-ref.bundle.schema.json  odata-csdl-ref.bundle.provenance.yaml  odata-csdl-ref.bundle.schema.json  source-model.bundle.provenance.yaml  source-model.bundle.schema.json  sql-model-ref.bundle.provenance.yaml  sql-model-ref.bundle.schema.json  target-model-ref.bundle.provenance.yaml  target-model-ref.bundle.schema.json  transform-step.bundle.provenance.yaml  transform-step.bundle.schema.json
schemas/enterprise-mapping/tests/: test_enterprise_mapping_schemas.py
schemas/locks/: upstream.lock.yaml
schemas/metering/: README.md  manifest.yaml
schemas/metering/bundles/: agreement-ref.bundle.provenance.yaml  agreement-ref.bundle.schema.json  charge-statement.bundle.provenance.yaml  charge-statement.bundle.schema.json  cloudevents-envelope.bundle.provenance.yaml  cloudevents-envelope.bundle.schema.json  counterparty-ref.bundle.provenance.yaml  counterparty-ref.bundle.schema.json  event-metadata.bundle.provenance.yaml  event-metadata.bundle.schema.json  policy-ref.bundle.provenance.yaml  policy-ref.bundle.schema.json  quota-window.bundle.provenance.yaml  quota-window.bundle.schema.json  rated-usage.bundle.provenance.yaml  rated-usage.bundle.schema.json  rating-rule.bundle.provenance.yaml  rating-rule.bundle.schema.json  settlement-batch.bundle.provenance.yaml  settlement-batch.bundle.schema.json  usage-dimension.bundle.provenance.yaml  usage-dimension.bundle.schema.json  usage-record.bundle.provenance.yaml  usage-record.bundle.schema.json
schemas/metering/tests/: test_metering_schemas.py
schemas/odrl/: README.md  manifest.yaml
schemas/odrl/bundles/: constraint.bundle.provenance.yaml  (+19 more)
schemas/tools/: _support.py  bundle.py  diff_schema.py  generate_docs.py  pin_upstream.py  validate.py
schemas/vc/: README.md  manifest.yaml
(+1432 files in other folders)
