[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataspace-control-plane-packs"
version = "0.1.0"
description = "Ecosystem and regulatory overlay packs for the dataspace control-plane"
requires-python = ">=3.12"
dependencies = [
    "dataspace-control-plane-core",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataspace_control_plane_packs"]
# Explicitly include pinned normative vocab files (html, ttl, json, yaml, toml)
# so that SHA-256 checks against manifest.toml work after wheel installation.
artifacts = [
    "src/dataspace_control_plane_packs/**/vocab/pinned/**",
    "src/dataspace_control_plane_packs/**/vendor/**",
    "src/dataspace_control_plane_packs/**/rules/**",
    "src/dataspace_control_plane_packs/**/manifest.toml",
]
exclude = [
    "src/dataspace_control_plane_packs/conftest.py",
    "src/dataspace_control_plane_packs/**/tests/**",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/dataspace_control_plane_packs"]
