[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dataspace-control-plane-procedures"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.7",
    "pydantic>=2.7",
    "dataspace-control-plane-core",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "temporalio[testserver]>=1.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
