[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "control-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "temporalio>=1.7.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "structlog>=24.2.0",
    "asyncpg>=0.29.0",
    "sse-starlette>=2.1.0",
    "dataspace-control-plane-procedures>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
