[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temporal-workers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.7.0",
    "pydantic-settings>=2.3.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "structlog>=24.2.0",
    "httpx>=0.27.0",
    "dataspace-control-plane-core>=0.1.0",
    "dataspace-control-plane-procedures>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "temporalio[testserver]>=1.7.0",
]
